--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "mocha": "^4.1.0",
     "mocha-each": "^1.1.0",
     "spectron": "3.7.x",
-    "stylelint": "^8.4.0",
+    "stylelint": "^9.4.0",
     "stylelint-config-standard": "latest",
     "time-grunt": "latest"
   },
   "dependencies": {
+    "ajv": "^6.5.2",
     "body-parser": "^1.18.2",
     "colors": "^1.1.2",
     "electron": "^2.0.0",
@@ -65,10 +66,12 @@
     "iconv-lite": "latest",
     "mocha-logger": "^1.0.5",
     "moment": "latest",
-    "request": "^2.83.0",
+    "nunjucks": "^3.1.3",
+    "request": "^2.87.0",
     "rrule-alt": "^2.2.7",
     "simple-git": "^1.85.0",
     "socket.io": "^2.0.4",
+    "stylint": "^1.5.9",
     "valid-url": "latest",
     "walk": "latest"
   }
